# haskell-socket-sctp

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  socket-sctp.cabal  stack.yaml
examples/: Client.hs  Server.hs
platform/linux/src/System/Socket/Protocol/SCTP/: Platform.hsc
src/System/Socket/Protocol/: SCTP.hsc
src/System/Socket/Protocol/SCTP/: Internal.hsc  hs_sctp.c  hs_sctp.h
tests/: Notifications.hs  SendAll.hsc  SendReceiveMessage.hs  TooSmallBuffer.hs
