name:                socket-sctp
version:             0.1.0.0
synopsis:            STCP socket extensions library.
description:         TODO

license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            System, Socket, Network
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/lpeterse/haskell-socket-sctp
bug-reports:         https://github.com/lpeterse/haskell-socket-sctp/issues
tested-with:         GHC==7.10.1, GHC==7.8.3
extra-source-files:  README.md
                     CHANGELOG.md
                     CONTRIBUTORS.txt
                     platform/linux/src/System/Socket/Protocol/SCTP/Platform.hsc
                     platform/linux/include/hs_sctp.h
                     platform/linux/cbits/hs_sctp.c

library
  ghc-options:         -Wall
  exposed-modules:     System.Socket.Protocol.SCTP
  other-modules:       System.Socket.Protocol.SCTP.Platform
                     , System.Socket.Protocol.SCTP.Internal
  build-depends:       base >= 4.7 && < 5
                     , bytestring < 0.11
                     , socket >= 0.5.0.0 && < 0.6.0.0
  hs-source-dirs:      src
  build-tools:         hsc2hs
  default-language:    Haskell2010
  install-includes:    hs_sctp.h
  include-dirs:        platform/linux/include
  hs-source-dirs:      platform/linux/src
  c-sources:           platform/linux/cbits/hs_sctp.c
  extra-libraries:     sctp

source-repository head
  type:                git
  location:            git://github.com/lpeterse/haskell-socket-sctp.git
